Removed color for tech skills hover effect grammer corrections Added Linux to tech skills Added Agile to tech skills Form no longer clears input when not full filled out Form notifies user if unable to send Form will disable the submit button while sending Project section break point added at 1000px that will drop the third project down for better spacing

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -968,7 +968,6 @@
 	}
 
 /* Features */
-
 	.features {
 		@include vendor('display', 'flex');
 		@include vendor('flex-wrap', 'wrap');
@@ -1045,7 +1044,86 @@
 		}
 	}
 
-/* Spotlight */
+	@media screen and (max-width: 1000px) {
+		.features {
+			@include vendor('display', 'flex');
+			@include vendor('flex-wrap', 'wrap');
+			@include vendor('justify-content', 'center');
+			list-style: none;
+			padding: 0;
+			width: 100%;
+
+			li {
+				//@include padding(4em, 4em, (0,0,0,2em));
+				//display: block;
+				position: relative;
+				text-align: left;
+				width: 50%;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+
+				@for $i from 1 through _misc(max-features) {
+					$j: 0.035 * $i;
+
+					&:nth-child(#{$i}) {
+						background-color: rgba(0,0,0, $j);
+					}
+				}
+
+				&:before {
+					display: block;
+					color: _palette(accent2, bg);
+					position: absolute;
+					left: 1.75em;
+					top: 2.75em;
+					font-size: 1.5em;
+				}
+
+				&:nth-child(1) {
+					border-top-left-radius: 3px;
+				}
+
+				&:nth-child(2) {
+					border-top-right-radius: 3px;
+				}
+
+				&:nth-last-child(1) {
+					border-bottom-right-radius: 3px;
+				}
+
+				&:nth-last-child(2) {
+					border-bottom-left-radius: 3px;
+				}
+
+				@include breakpoint('<=medium') {
+					@include padding(3em, 2em);
+					text-align: center;
+
+					&:before {
+						left: 0;
+						margin: 0 0 (_size(element-margin) * 0.5) 0;
+						position: relative;
+						top: 0;
+					}
+				}
+
+				@include breakpoint('<=small') {
+					@include padding(3em, 0);
+					background-color: transparent !important;
+					border-top: solid 2px _palette(border);
+					width: 100%;
+
+					&:first-child {
+						border-top: 0;
+					}
+				}
+			}
+		}
+	}
+
+
+	/* Spotlight */
 
 	.spotlight {
 		@include vendor('align-items', 'center');
@@ -1927,7 +2005,7 @@
 
 	.wrapper.style5 .icon.major:hover {
 		border-color: #2fb1a4;
-		background: #2fb1a42e;
+		//background: #2fb1a42e;
 	}
 
 	.tech-skills {
@@ -2064,6 +2142,19 @@
 		background-repeat: no-repeat;
 	}
 
+	.linux-background:before {
+		background: url(../../images/linux.svg);
+		background-position: center;
+		background-size: 42%;
+		background-repeat: no-repeat;
+	}
+
+	.agile-background:before {
+		background: url(../../images/agile.svg);
+		background-position: center;
+		background-size: 42%;
+		background-repeat: no-repeat;
+	}
 	/**
 	*	Contact Form Alert Message
 	 */
